--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <script src="http://d3js.org/d3.v4.min.js" charset="utf-8"></script>
   <script src="http://d3js.org/topojson.v1.min.js"></script>
   
+  <!-- utm to lat long -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.4.3/proj4.js"></script>
+  
   <!-- css script --
   <!--bootstrap and sidebar css--> 
   <link rel="stylesheet" href="css/bootstrap.min.css">
