--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
   <script src="src/bootstrap.min.js"></script>
   <script src="src/bootstrap-left-slide-menu.js"></script>
   
-  <script src="http://d3js.org/d3.v4.min.js" charset="utf-8"></script>
-  <script src="http://d3js.org/topojson.v1.min.js"></script>
+  <script src="src/d3.v4.min.js" charset="utf-8"></script>
+  <script src="src/topojson.v1.min.js"></script>
+  <script src="src/queue.v1.min.js"></script>
+  
+  <script src="https://d3js.org/d3-hexbin.v0.2.min.js"></script>
   
   <!-- utm to lat long -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.4.3/proj4.js"></script>
+  <script src="src/proj4.js"></script>
   
   <!-- css script --
   <!--bootstrap and sidebar css--> 
