--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>BIG4 Diversity</title>
+  <title>Denmark Beetle Atlas</title>
   <meta http-equiv="content-type" content="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -95,7 +95,7 @@
         </button>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-12 col-sm-12">
+            <div class="col-md-12 col-sm-12 ">
               <div id="map"></div>
             </div>  
           </div>
