--- a/index.html
+++ b/index.html
@@ -95,9 +95,15 @@
         </button>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-12 col-sm-12 ">
+            <div class="col-md-8 col-sm-8 ">
               <div id="map"></div>
+            </div>
+            <div class="col-md-4 col-sm-4 ">
+              <div id="barChart"></div>
             </div>  
+          </div>
+          <div class="row">
+            <div id="slider" class="col-md-8"></div>
           </div>
         </div>
     </div>
@@ -105,6 +111,7 @@
     <!-- /#wrapper -->
    
   <script src="src/app.js"></script>
+  <!--script src="src/slider.js"></script-->
   
 </body>
 
