--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Denmark Beetle Atlas</title>
+  <title>The Denmark BEETLE ATLAS</title>
   <meta http-equiv="content-type" content="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="css/bootstrap-left-slide-menu.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
- 
+ <link rel="shortcut icon" type="image/png" href="./data/img/beetle1.png">
   
   <!-- fontawesome and custom css -->
   <!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"-->
@@ -46,13 +46,13 @@
                 <span class="icon-bar"></span>
                 </button>
         <!-- Header -->
-        <a class="navbar-brand" href="index.html">Denmark Beetle Atlas</a>
+        <a class="navbar-brand" href="index.html">TheDenmark <br><b>BEETLE</b>ATLAS</a>
       </div>
       <div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="index.html">MAP</a></li>
-            <li><a href="#"> ABOUT</a></li>
+            <li class="active"><a href="index.html">MAP</a></li>
+            <li><a href="about.html"> ABOUT</a></li>
           </ul>
         </div>
       </div>
@@ -103,7 +103,7 @@
             </div>  
           </div>
           <div class="row">
-            <div id="slider" class="col-md-8"></div>
+            <div id="slider" class="col-md-12"></div>
           </div>
         </div>
     </div>
@@ -111,7 +111,7 @@
     <!-- /#wrapper -->
    
   <script src="src/app.js"></script>
-  <!--script src="src/slider.js"></script-->
+  <script src="src/slider.js"></script>
   
 </body>
 
