--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
   <link rel="stylesheet" href="css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="css/bootstrap-left-slide-menu.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
- <link rel="shortcut icon" type="image/png" href="./data/img/beetle1.png">
+  
+  <!-- favicon image -->
+  <link rel="shortcut icon" type="image/png" href="./data/img/beetle1.png">
   
   <!-- fontawesome and custom css -->
-  <!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
 </head>
@@ -46,13 +48,16 @@
                 <span class="icon-bar"></span>
                 </button>
         <!-- Header -->
-        <a class="navbar-brand" href="index.html">TheDenmark <br><b>BEETLE</b>ATLAS</a>
+        <!--a class="navbar-brand" href="index.html">TheDenmark <br><b>BEETLE</b>ATLAS</a-->
+        <a class="navbar-brand" rel="home" href="index.html">
+          <img style="max-width:250px" src="./data/img/logo.png">
+        </a>
       </div>
       <div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">MAP</a></li>
-            <li><a href="about.html"> ABOUT</a></li>
+            <li class="active"><a href="index.html"><i class="fa fa-globe" aria-hidden="true"></i> &nbsp;MAP</a></li>
+            <li><a href="about.html"><i class="fa fa-info-circle" aria-hidden="true"></i> &nbsp; ABOUT</a></li>
           </ul>
         </div>
       </div>
