--- a/about.html
+++ b/about.html
@@ -14,8 +14,12 @@
   <!--script-->
   <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+  
   <!-- fontawesome and custom css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  
+  <!-- favicon image -->
+  <link rel="shortcut icon" type="image/png" href="./data/img/beetle1.png">
   
 </head>
 
@@ -31,13 +35,16 @@
                 <span class="icon-bar"></span>
                 </button>
         <!-- Header -->
-        <a class="navbar-brand" href="index.html">TheDenmark <br><b>BEETLE</b>ATLAS</a>
+        <a class="navbar-brand" rel="home" href="index.html">
+          <img style="max-width:250px" src="./data/img/logo.png">
+        </a>
+        
       </div>
       <div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="index.html">MAP</a></li>
-            <li class="active"><a href="about.html"> ABOUT</a></li>
+           <li ><a href="index.html"><i class="fa fa-globe" aria-hidden="true"></i> &nbsp;MAP</a></li>
+            <li class="active"><a href="about.html"><i class="fa fa-info-circle" aria-hidden="true"></i> &nbsp; ABOUT</a></li>
           </ul>
         </div>
       </div>
