--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>BIG4 Diversity</title>
+  <title>The Denmark Beetle Bank</title>
   <meta http-equiv="content-type" content="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -36,7 +36,7 @@
                 </button>
         <!-- Header -->
         <a class="navbar-brand" rel="home" href="index.html">
-          <img style="max-width:250px" src="./data/img/logo.png">
+          <img style="max-width:250px; margin-top:-10px" src="./data/img/logo.png">
         </a>
         
       </div>
