--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>The Denmark BEETLE ATLAS</title>
+  <title>The Denmark Beetle Bank</title>
   <meta http-equiv="content-type" content="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -50,7 +50,7 @@
         <!-- Header -->
         <!--a class="navbar-brand" href="index.html">TheDenmark <br><b>BEETLE</b>ATLAS</a-->
         <a class="navbar-brand" rel="home" href="index.html">
-          <img style="max-width:250px" src="./data/img/logo.png">
+          <img style="max-width:250px; margin-top:-10px" src="./data/img/logo.png">
         </a>
       </div>
       <div>
