--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
   <footer class="footer">
     <div class="container">
       <p>Developed By :
-        <span><a href="#" target="_blank">Zoologisk Museum, Copenhagen</a></span> &nbsp; And &nbsp;
+        <span><a href="#" target="_blank">Natural History Museum, Denmark</a></span> &nbsp; And &nbsp;
         <span><a href="http://big4-project.eu/" target="_blank">Big4 Project</a></span>
         <span style="float:right"> Project Funded By: <b>European Union</b></span>
       </p>
