--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
  <footer class="footer">
     <div class="container">
       <p>Developed By :
-        <span><a href="#" target="_blank">Zoologisk Museum, Copenhagen</a></span> &nbsp; And &nbsp;
+        <span><a href="#" target="_blank">Natural History Museum, Denmark</a></span> &nbsp; And &nbsp;
         <span><a href="http://big4-project.eu/" target="_blank">Big4 Project</a></span>
         <span style="float:right"> Project Funded By: <b>European Union</b></span>
       </p>
@@ -100,15 +100,17 @@
         </button>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-8 col-sm-8 ">
+            <div class="col-md-8 col-sm-10 ">
               <div id="map"></div>
             </div>
-            <div class="col-md-4 col-sm-4 ">
+            <div class="col-md-4 col-sm-2">
               <div id="barChart"></div>
             </div>  
           </div>
           <div class="row">
-            <div id="slider" class="col-md-12"></div>
+            <div class="col-md-12 col-sm-12">
+              <div id="slider" ></div>
+            </div>
           </div>
         </div>
     </div>
