--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   
   <script src="https://d3js.org/d3-hexbin.v0.2.min.js"></script>
   
+  <!--Google geomap -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAdcbg8vmnoK978ZycmyWPhFNfXxeZRJ1w"></script>
+  
   <!-- utm to lat long -->
   <script src="src/proj4.js"></script>
   
@@ -117,8 +120,11 @@
 </div>
     <!-- /#wrapper -->
    
-  <script src="src/app.js"></script>
-  <script src="src/slider.js"></script>
+  <!-- Annotate data with geoCords -->
+  <script src="src/annnotateData.js"></script>
+  
+  <!--script src="src/app.js"></script>
+  <script src="src/slider.js"></script-->
   
 </body>
 
