--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
         </button>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-8 col-sm-10 ">
+            <div class="col-md-8 col-sm-6">
               <div id="map"></div>
             </div>
-            <div class="col-md-4 col-sm-2">
+            <div class="col-md-4 col-sm-6">
               <div id="barChart"></div>
             </div>  
           </div>
@@ -123,8 +123,10 @@
   <!-- Annotate data with geoCords -->
   <script src="src/annnotateData.js"></script>
   
-  <!--script src="src/app.js"></script>
-  <script src="src/slider.js"></script-->
+  <script src="src/app.js"></script>
+  <script src="src/groupBarChart.js"></script>
+  <script src="src/topojsonMap.js"></script>
+  <script src="src/slider.js"></script>
   
 </body>
 
