--- a/index.html
+++ b/index.html
@@ -107,11 +107,16 @@
               <div id="map"></div>
             </div>
             <div class="col-md-4 col-sm-6">
+              <div id="view_selection" class="btn-group">
+                  <a href="#" id="family" class="btn btn-raised active">Family</a>
+                  <a href="#" id="species" class="btn btn-raised">Species</a>
+              </div>
               <div id="barChart"></div>
             </div>  
           </div>
           <div class="row">
             <div class="col-md-12 col-sm-12">
+              
               <div id="slider" ></div>
             </div>
           </div>
