--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
             </div>
             <div class="col-md-4 col-sm-6">
               <div id="view_selection" class="btn-group">
-                  <a href="#" id="family" class="btn btn-raised active">Family</a>
-                  <a href="#" id="species" class="btn btn-raised">Species</a>
+                <button id="family" style="margin-right: 10px;" class="btn btn-raised active">Family</button>
+                <button id="species" class="btn btn-raised">Species</button>
               </div>
               <div id="barChart"></div>
             </div>  
