--- a/about.html
+++ b/about.html
@@ -13,20 +13,20 @@
   <!-- css script -->
   <!--script-->
   <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-  
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+
   <!-- fontawesome and custom css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  
+
   <!-- favicon image -->
   <link rel="shortcut icon" type="image/png" href="./data/img/beetle1.png">
-  
+
 </head>
 
 <body>
   <!-- Navigation -->
 
-   <nav class="navbar navbar-fixed-top">
+  <nav class="navbar navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
 
@@ -38,12 +38,13 @@
         <a class="navbar-brand" rel="home" href="index.html">
           <img style="max-width:250px; margin-top:-10px" src="./data/img/logo.png">
         </a>
-        
+
       </div>
       <div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-           <li ><a href="index.html"><i class="fa fa-globe" aria-hidden="true"></i> &nbsp;MAP</a></li>
+            <li><a href="index.html"><i class="fa fa-globe" aria-hidden="true"></i> &nbsp;MAP</a></li>
+            <li><a href="storytelling.html"><i class="fa fa-info-circle" aria-hidden="true"></i> &nbsp; STORY</a></li>
             <li class="active"><a href="about.html"><i class="fa fa-info-circle" aria-hidden="true"></i> &nbsp; ABOUT</a></li>
           </ul>
         </div>
@@ -64,17 +65,18 @@
 
   <!-- Library Description -->
   <div class="container-fluid">
-    
+
     <div class="row">
       <div class="col-md-12 col-xs-12">
         <div id="about">
-        <p>
-          This is a about page of project
-          </p></div>
+          <p>
+            This is a about page of project
+          </p>
         </div>
+      </div>
     </div>
   </div>
-  
+
 </body>
 
 </html>
