add tree view for taxonomic hierarchy

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
       <div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html"><i class="fa fa-globe" aria-hidden="true"></i> &nbsp;MAP</a></li>
-            <li><a href="storytelling.html"><i class="fa fa-info-circle" aria-hidden="true"></i> &nbsp; Taxonomy Tree</a></li>
-            <li><a href="about.html"><i class="fa fa-info-circle" aria-hidden="true"></i> &nbsp; ABOUT</a></li>
+            <li class="active"><a href="index.html"><i class="fa fa-globe" aria-hidden="true"></i> &nbsp;Map View</a></li>
+            <li><a href="taxonomy.html"><i class="fa fa-info-circle" aria-hidden="true"></i> &nbsp; Taxonomy View</a></li>
+            <li><a href="about.html"><i class="fa fa-info-circle" aria-hidden="true"></i> &nbsp; About</a></li>
           </ul>
         </div>
       </div>
