--- a/taxonomy.html
+++ b/taxonomy.html
@@ -9,8 +9,8 @@
   <!-- using local jquery, bootstrap and d3.js libs -->
   <script type="text/javascript" src="src/jquery.js"></script>
   <script src="src/bootstrap.min.js"></script>
-  <!--script src="src/d3.v4.min.js" charset="utf-8"></script-->
-  <script src="src/d3.v3.min.js"></script>
+  <script src="src/d3.v4.min.js" charset="utf-8"></script>
+  <!--script src="src/d3.v3.min.js"></script-->
   <!--script src="src/circle_packing.js"></script-->
   <script src="src/hierarchyTree.js"></script>
 
@@ -52,9 +52,9 @@
       <div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="index.html"><i class="fa fa-globe" aria-hidden="true"></i> &nbsp;MAP</a></li>
-            <li class="active"><a href="storytelling.html"><i class="fa fa-info-circle" aria-hidden="true"></i> &nbsp; Taxonomy Tree</a></li>
-            <li><a href="about.html"><i class="fa fa-info-circle" aria-hidden="true"></i> &nbsp; ABOUT</a></li>
+            <li><a href="index.html"><i class="fa fa-globe" aria-hidden="true"></i> &nbsp;Map View</a></li>
+            <li class="active"><a href="taxonomy.html"><i class="fa fa-info-circle" aria-hidden="true"></i> &nbsp; Taxonomy View</a></li>
+            <li><a href="about.html"><i class="fa fa-info-circle" aria-hidden="true"></i> &nbsp; About</a></li>
           </ul>
         </div>
       </div>
@@ -97,7 +97,7 @@
       </div>
     </div>
   </div>
-  <script src="src/stroytelling.js"></script>
+  <script src="src/taxonomy.js"></script>
 </body>
 
 </html>
