--- a/taxonomy.html
+++ b/taxonomy.html
@@ -9,8 +9,8 @@
   <!-- using local jquery, bootstrap and d3.js libs -->
   <script type="text/javascript" src="src/jquery.js"></script>
   <script src="src/bootstrap.min.js"></script>
-  <script src="src/d3.v4.min.js" charset="utf-8"></script>
-  <!--script src="src/d3.v3.min.js"></script-->
+  <!--script src="src/d3.v4.min.js" charset="utf-8"></script-->
+  <script src="src/d3.v3.min.js"></script>
   <!--script src="src/circle_packing.js"></script-->
   <script src="src/hierarchyTree.js"></script>
 
@@ -98,6 +98,7 @@
     </div>
   </div>
   <script src="src/taxonomy.js"></script>
+  <script src="src/punchcard.js"></script>
 </body>
 
 </html>
