--- a/taxonomy.html
+++ b/taxonomy.html
@@ -9,8 +9,8 @@
   <!-- using local jquery, bootstrap and d3.js libs -->
   <script type="text/javascript" src="src/jquery.js"></script>
   <script src="src/bootstrap.min.js"></script>
-  <!--script src="src/d3.v4.min.js" charset="utf-8"></script-->
-  <script src="src/d3.v3.min.js"></script>
+  <script src="src/d3.v4.min.js" charset="utf-8"></script>
+  <!--script src="src/d3.v3.min.js"></script-->
   <!--script src="src/circle_packing.js"></script-->
   <script src="src/hierarchyTree.js"></script>
 
@@ -78,7 +78,7 @@
     <div class="row">
       <div class="col-md-12">
 
-        <div class="col-md-4 col-sm-6 col-xs-6 chart-wrapper" style="margin-top:100px">
+        <div class="col-md-3 col-sm-6 col-xs-6 chart-wrapper" style="margin-top:100px">
           <div class="chart-title">
             Taxonomy Tree
             <div id="searchName" class="col-md-2"></div>
@@ -86,16 +86,34 @@
           <div id="reftree" class="chart-area"></div>
         </div>
 
-        <div class="col-md-8 col-sm-6 col-xs-6 chart-wrapper" style="margin-top:100px">
+        <div class="col-md-9 col-sm-6 col-xs-6 chart-wrapper" style="margin-top:100px">
           <div class="chart-title">
             Image Viewer
             <div id="searchName" class="col-md-2"></div>
           </div>
-          <div id="imagetree" class="chart-area"></div>
-        </div>
+          <div id="imagetree" class="col-md-12 chart-area">
+            <!--div class="col-md-3"-->
+            <img src="data/img/Gyrinus_minutus.jpg" class="img-rounded" width="204" height="236">
+            <img src="data/img/Microsporus%20acaroides.jpg" class="img-rounded" width="204" height="236">
+            <img src="data/img/Haliplus%20(Neohaliplus)%20lineatocollis.jpg" class="img-rounded" width="204" height="236">
+            <img src="data/img/Microsporus%20acaroides.jpg" class="img-rounded" width="204" height="236">
+            <img src="data/img/Orectochilus%20villosus.jpg" class="img-rounded" width="204" height="236">
+            <img src="data/img/placeholder.jpg" class="img-rounded" width="204" height="236">
+            <img src="data/img/placeholder.jpg" class="img-rounded" width="204" height="236">
+            <img src="data/img/Gyrinus_minutus.jpg" class="img-rounded" width="204" height="236">
+            <img src="data/img/Microsporus%20acaroides.jpg" class="img-rounded" width="204" height="236">
+            <img src="data/img/Haliplus%20(Neohaliplus)%20lineatocollis.jpg" class="img-rounded" width="204" height="236">
+            <img src="data/img/Microsporus%20acaroides.jpg" class="img-rounded" width="204" height="236">
+            <img src="data/img/Orectochilus%20villosus.jpg" class="img-rounded" width="204" height="236">
+            <img src="data/img/placeholder.jpg" class="img-rounded" width="204" height="236">
+            <img src="data/img/placeholder.jpg" class="img-rounded" width="204" height="236">
 
+          </div>
+        </div>
       </div>
+
     </div>
+  </div>
   </div>
   <script src="src/taxonomy.js"></script>
   <script src="src/punchcard.js"></script>
