chnage map and sunbusrt tranformation

--- a/index.html
+++ b/index.html
@@ -104,15 +104,12 @@
         </button>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-md-8 col-sm-6">
+          <div class="col-md-6 col-sm-6">
             <div id="map"></div>
             <div id="slider"></div>
           </div>
-          <div class="col-md-4 col-sm-6">
-            <div id="view_selection" class="btn-group">
-              <button id="family" style="margin-right: 10px;" class="btn btn-raised active">Sunburst</button>
-              <button id="species" class="btn btn-raised">Circle</button>
-            </div>
+          <div class="col-md-6 col-sm-6">
+            <!--button id="reset" class="btn btn-raised">Reset</button-->
             <div id="barChart"></div>
           </div>
         </div>
