add tooltip with to map

--- a/index.html
+++ b/index.html
@@ -108,9 +108,10 @@
               <button id="resetMap" class="btn btn-info btn-raised">Reset</button>
             </div>
             <div id="map" class="chart-area">
+
             </div>
-            <div id="slider">
-            </div>
+            <div id="slider" class="chart-area"> </div>
+
 
 
           </div>
