add search function

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <script src="src/bootstrap-left-slide-menu.js"></script>
   <script src="src/d3.v4.min.js" charset="utf-8"></script>
   <script src="src/awesomplete.min.js" charset="utf-8"></script>
-  <script src="src/" charset="utf-8"></script>
   <!--script src="//d3js.org/d3-tile.v0.0.min.js"></script-->
   <script src="src/topojson.v1.min.js"></script>
   <!--script src="src/geo.tile.min.js"></script-->
@@ -94,6 +93,13 @@
           <span>Search Species</span>
           <div>
             <input id="searchSpecies" />
+            <button id="searchSp" class="btn btn-info btn-raised">Go</button>
+          </div>
+          <br><br>
+          <span>Search Family</span>
+          <div>
+            <input id="searchFamily" />
+            <button id="searchFm" class="btn btn-info btn-raised">Go</button>
           </div>
           <br><br>
           <span>Color By</span>
