add cors request

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>The Denmark Beetle Bank</title>
-  <meta http-equiv="content-type" content="UTF-8" />
+  <meta http-equiv="Access-Control-Allow-Origin" content="*">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- using local jquery, bootstrap and d3.js libs -->
