add image area layout

--- a/taxonomy.html
+++ b/taxonomy.html
@@ -86,24 +86,33 @@
         <div id="reftree" class="chart-area"></div>
       </div>
 
-      <div class="col-md-8 col-sm-6 col-xs-6 chart-wrapper" style="margin-top:100px">
+      <div id="imageView" class="col-md-8 col-sm-6 col-xs-6 chart-wrapper" style="margin-top:100px">
         <div class="chart-title">
           Image Viewer
           <!--div id="searchName" class="col-md-2"></div-->
         </div>
-        <div id="imagetree" class="col-md-12 chart-area">
-          <!--div class="col-md-3"-->
-          <img src="data/img/Gyrinus_minutus.jpg" class="img-rounded" width="204" height="236">
-          <img src="data/img/Microsporus%20acaroides.jpg" class="img-rounded" width="204" height="236">
-          <img src="data/img/Haliplus%20(Neohaliplus)%20lineatocollis.jpg" class="img-rounded" width="204" height="236">
-          <img src="data/img/Microsporus%20acaroides.jpg" class="img-rounded" width="204" height="236">
-          <img src="data/img/Orectochilus%20villosus.jpg" class="img-rounded" width="204" height="236">
-          <img src="data/img/placeholder.jpg" class="img-rounded" width="204" height="236">
 
+        <div id="imageArea" class="chart-area">
+          <div class="col-md-3 col-sm-6 col-xs-12 imageWrapper">
+            <img src="data/img/placeholder.jpg ">
+            <p> Species Name</p>
+          </div>
+          <div class="col-md-3 col-sm-6 col-xs-12 imageWrapper">
+            <img src="data/img/placeholder.jpg ">
+            <p> Species Name</p>
+          </div>
+          <div class="col-md-3 col-sm-6 col-xs-12 imageWrapper">
+            <img src="data/img/placeholder.jpg ">
+            <p> Species Name</p>
+          </div>
+          <div class="col-md-3 col-sm-6 col-xs-12 imageWrapper">
+            <img src="data/img/placeholder.jpg ">
+            <p> Species Name</p>
+          </div>
         </div>
       </div>
-
     </div>
+
   </div>
   <script src="src/taxonomy.js"></script>
   <script src="src/punchcard.js"></script>
