--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <footer class="footer navbar-fixed-bottom">
     <div class="container">
       <p>Developed By :
-        <span><a href="#" target="_blank">Natural History Museum, Denmark</a></span> &nbsp; And &nbsp;
+        <span><a href="https://zoologi.snm.ku.dk/" target="_blank">Natural History Museum, Denmark</a></span> &nbsp; And &nbsp;
         <span><a href="http://big4-project.eu/" target="_blank">Big4 Project</a></span>
         <span style="float:right"> Project Funded By: <b>European Union</b></span>
       </p>
