add minor changes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>The Denmark Beetle Bank</title>
   <meta http-equiv="Access-Control-Allow-Origin" content="*">
+  <header name ="Access-Control-Allow-Origin" value = "http://127.0.0.1:34719" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- using local jquery, bootstrap and d3.js libs -->
@@ -81,7 +82,7 @@
       <p>Developed By :
         <span><a href="https://zoologi.snm.ku.dk/" target="_blank">Natural History Museum, Denmark</a></span> &nbsp; And &nbsp;
         <span><a href="http://big4-project.eu/" target="_blank">Big4 Project</a></span>
-        <span style="float:right"> Project Funded By: <b>European Union</b></span>
+        <span style="float:right"> Project Funded By: <b>European Union</b>&nbsp;&nbsp;<img id="footer-logo" height="30" width="40" src="/data/eulogo.jpeg"/></span>
       </p>
     </div>
   </footer>
